# cgminer

./: AUTHORS.md  ChangeLog  MCast.java  Makefile.am  NEWS.md  README.md  adl.c  algorithm.c  api-example.c  api-example.php  api-example.py  api.c  compat.h  configure.ac  miner.h  miner.php  ocl.c  pool.c  sgminer.c  util.c  util.h
doc/: API  BUGS.md  FAQ.md  GPU  MINING.md  cygwin-build.txt  windows-build.txt
winbuild/: README.txt  sgminer.sln  sgminer.vcxproj  sgminer.vcxproj.filters
